--- a/gb/news2007_4.md
+++ b/gb/news2007_4.md
@@ -31,7 +31,6 @@
 
 欺凌会影响孩.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 12:47 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/11/n11714928.md#1" target="_blank">沉迷手机让青少年幸福感下降</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/11/n11714928.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-860811634-150x120.jpg" align ="left"></a>你是否担心使用智能手机会对孩子造成负面影响？你的担心是有道理的。一项新研究发现，与不常使用手机等数字设备的青少年相比，沉迷这些设备的青少年“明显”不快乐。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 12:39 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/13/n11721346.md#1" target="_blank">五律：寂</a><br></h3>飘地鹅毛响，接天云影回。 蝉吟如夏吼，人语作冬雷。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月14日 12:15 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/12/n11718633.md#1" target="_blank">五律：清晨</a><br></h3> 遥夜划鸡鸣，犬从三五声。 云岚熏晓色，草露衬时荣。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 12:12 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/12/n11718664.md#1" target="_blank">台湾古典诗：台北考棚</a><br></h3> 腾云浩气火车头，带动鹃城学术遒， 此地布金怀故老，他山攻玉萃名流；......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 11:12 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/12/n11718727.md#1" target="_blank">歌词：这里，那里</a><br></h3>善在眼睛里， 海在胸怀里， 山在脊梁里， 天在心空里。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 11:10 PM			</td></tr>
@@ -39,5 +38,6 @@
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/9/n11711043.md#1" target="_blank">七律：意</a><br></h3>不忍严冬萧瑟漫， 细寻生意踏冰河。 多情垂柳摇金发， 沉默杉松耸玉柯。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 12:12 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/11/n11716173.md#1" target="_blank">五律：黄昏</a><br></h3>寒鼓夕阳阔，落霞天际悠。 飞鸿成一点，逝景合长流。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 10:33 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/10/n11713631.md#1" target="_blank">五绝：证悟</a><br></h3> 念出妖魔灭，神威止恶凶。 善行千万里，入定一棵松。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 10:11 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/9/n11711109.md#1" target="_blank">虞美人．忧</a><br></h3> 严冬万木萧疏处，一片忧伤度。 干枯栎叶不离枝，但有风来声瑟感心知。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 12:13 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/news2007_3.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/news2007.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/news2007_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/news2007_3.md#1">3</a>&nbsp;&nbsp;4&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/news2007_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/news2007_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/news2007_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/news2007_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/news2007_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/news2007_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/news2007_5.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/hxrfvz257/djy/blob/master/gb/news2007_4.md#1<br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/news2007_4.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/hxrfvz257/djy/blob/master/gb/news2007_4.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news2007_4.htm">http://www.epochtimes.com/gb/news2007_4.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
