--- a/gb/news392_2.md
+++ b/gb/news392_2.md
@@ -23,7 +23,15 @@
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/18/n11729917.md#1" target="_blank">袁斌：“南京事件”与所谓“四一二反革命政变”</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/18/n11729917.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2012/06/110629062200100383-150x120.jpg" align ="left"></a>1927年4月12日，国民党军队在上海逐步解除了上海工人纠察队的武装，同时逮捕、处决了一些中共党员。在广州，国民党也展开了清洗。大批中共党员和激进份子被捕，三百多人被处死。这是国民党“清党”第一期中的标志性事件，史学界一般称之为“四一二事件”，而中共则称其为“四一二反革命政变”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 5:58 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/18/n11729270.md#1" target="_blank">【名家专栏】破除“间谍门”阴谋的三步曲</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/18/n11729270.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Epoch_Times9A6A9246-1200x800-150x120.jpg" align ="left"></a>在过了一年半之后，美国司法部监察长迈克尔?E?霍洛维茨（Michael e. Horowitz）在上周一（12月9日）对外发布了他的最终报告。此前，霍洛维茨一直在审查关于联邦调查局（FBI）在2016年美国总统大选期间监视川普（特朗普）总统当时的竞选活动的严肃问题。周三（12月11日），他来到国会并讨论了这份报告。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 3:52 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/18/n11729772.md#1" target="_blank">文武：宁要动荡中的觉醒 也不要稳定中的愚昧</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/18/n11729772.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/GettyImages-1150179857-600x400-1-150x120.jpg" align ="left"></a>中共一直在高调的强调稳定，说什么稳定压倒一切，前几天中共召开高规格的经济工作会议，说了一大堆，其实就是围绕着一个字“稳”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 2:32 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/18/n11729547.md#1" target="_blank">李天笑：莱特希泽点出美中协议的奥秘和意义</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/18/n11729547.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1150582660-600x400-1-150x120.jpg" align ="left"></a>美中第一阶段协议达成后，川普及其团队对它评价极高。公平地说，只有掌握美中谈判背后内幕和真实了解美中争议要点的人，才能对谈判协议做出客观评价。川普及其团队也许是真正有资格能客观地对美中协议进行评论的人。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月18日 12:58 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/20/n11735097.md#1" target="_blank">关乐：修改校章不过是自往死凑的亡党臭棋</a><br></h3>复旦校章修，断然失自由。
+一切党领导，师生思想囚。
+学生示抗议，校歌老调吼。
+自然会痛心，当然会疾首。
+然而更需要，冷静思缘由。
+名实应相符，修未违此求。
+此亦非党意，歪打正着就。
+党妈何图谋？不能不深究。
+当初为夺权，自由猛忽悠。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 5:40 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/20/n11734669.md#1" target="_blank">袁斌：一个副省级中共官员的敛金术</a><br></h3>中共十八大以来，落马的亿元贪官已达43人。
 
 这些贪官究竟是通过何种手段捞钱的？前中共江西省常委、赣州市委书记史文清的敛金术为我们提供了一份生动的样本。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月20日 3:44 PM			</td></tr>
